--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@huasi/text-shuffle": "^1.0.6",
     "autoprefixer": "10.4.15",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.15",
@@ -21,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-type-animation": "^3.1.0",
     "resend": "^1.0.0",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "3.3.3",
+    "txt-shuffle": "^1.0.3"
   }
 }
